--- a/logstash/pipeline.conf
+++ b/logstash/pipeline.conf
@@ -1,17 +1,15 @@
-input { stdin { } }
-
-filter {
-  grok {
-    match => { "message" => "%{COMBINEDAPACHELOG}" }
-  }
-  date {
-    match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
+input {
+  stdin { }
+  beats {
+    port => "5044"
+    ssl => false
   }
 }
 
 output {
   elasticsearch {
     hosts => ["elkpg-elastic1:9200"]
+    index => "ls-%{+YYYY.MM.dd}"
     user => elastic
     password => changeme
   }
