--- a/filebeat.yml
+++ b/filebeat.yml
@@ -112,4 +112,4 @@ logging.level: debug
 # At debug level, you can selectively enable logging only for some components.
 # To enable all selectors use ["*"]. Examples of other selectors are "beat",
 # "publish", "service".
-#logging.selectors: ["*"]
+logging.selectors: ["publish"]
