--- a/logstash/pipeline.conf
+++ b/logstash/pipeline.conf
@@ -9,7 +9,7 @@ input {
 output {
   elasticsearch {
     hosts => ["elkpg-elastic1:9200"]
-    index => "ls-%{+YYYY.MM.dd}"
+    index => "logstash-%{+YYYY.MM.dd}"
     user => elastic
     password => changeme
   }
