--- a/logstash/pipeline.conf
+++ b/logstash/pipeline.conf
@@ -6,6 +6,72 @@ input {
   }
 }
 
+filter {
+  csv {
+    columns => [
+      "log_time",
+      "user_name",
+      "database_name",
+      "process_id",
+      "connection_from",
+      "session_id",
+      "session_line_num",
+      "command_tag",
+      "session_start_time",
+      "virtual_transaction_id",
+      "transaction_id",
+      "error_severity",
+      "sql_state_code",
+      "message",
+      "detail",
+      "hint",
+      "internal_query",
+      "internal_query_pos",
+      "context",
+      "query",
+      "query_pos",
+      "location",
+      "application_name"
+    ]
+  }
+}
+
+filter {
+  if [message] =~ /duration: [0-9]{1,8}[.]{0,1}[0-9]{1,5} ms/ {
+    mutate { rename => { "message" => "duration" } }
+    mutate { gsub => [ "duration", "duration: ", "" ] }
+    mutate { gsub => [ "duration", " ms", "" ] }
+    mutate { convert => { "duration" => "float" } }
+  } else if [message] =~ /statement: / {
+    mutate { rename => { "message" => "statement" } }
+    mutate { gsub => [ "statement", "statement: ", "" ] }
+  }
+
+  mutate { remove_field => [
+    "connection_from",
+    "session_id",
+    "session_line_num",
+    "command_tag",
+    "session_start_time",
+    "virtual_transaction_id",
+    "transaction_id",
+    "error_severity",
+    "sql_state_code",
+    "detail",
+    "hint",
+    "internal_query",
+    "internal_query_pos",
+    "context",
+    "query",
+    "query_pos",
+    "location",
+    "application_name",
+    "process_id",
+    "source",
+    "input_type"
+  ] }
+}
+
 output {
   elasticsearch {
     hosts => ["elkpg-elastic1:9200"]
