--- a/filebeat.yml
+++ b/filebeat.yml
@@ -62,11 +62,11 @@ filebeat.prospectors:
 
 # The name of the shipper that publishes the network data. It can be used to group
 # all the transactions sent by a single shipper in the web interface.
-#name:
+# name:
 
 # The tags of the shipper are included in their own field with each
 # transaction published.
-#tags: ["service-X", "web-tier"]
+tags: ["postgesql"]
 
 # Optional fields that you can specify to add additional information to the
 # output.
